--- a/index.html
+++ b/index.html
@@ -1,3 +1,21 @@
-<html>
-  
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>gato</title>
+    <link rel="stylesheet" href="index.css">
+</head>
+<body>
+    <header>
+        <h1>raças e cores de gatos</h1>
+    </header>
+    <section>
+        siames
+        frajola
+        preto 
+        branco 
+        tricolor
+    </section>
+</body>
 </html>
