--- a/index.html
+++ b/index.html
@@ -8,14 +8,10 @@
 </head>
 <body>
     <header>
-        <h1>raças e cores de gatos</h1>
+        <h1>Flor</h1>
     </header>
     <section>
-        siames
-        frajola
-        preto 
-        branco 
-        tricolor
+        camélias vermelhas
     </section>
 </body>
 </html>
